[package]
name = "substreams-aa"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
num-bigint = "0.4"
substreams = "0.5"
substreams-ethereum = "0.9.9"
substreams-entity-change = "1.3"
prost = "0.11"
prost-types = "0.11"
base64 = "0.13"
hex = "0.4"
phf = { version = "0.11.1", features = ["macros"] }
tiny-keccak = "2.0"

[build-dependencies]
prost-build = "0.11"
anyhow = "1"
substreams-ethereum = "0.9.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
